more responsive on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -86,7 +86,7 @@ img {
 
 /* About */
 .main-content {
-    font-size: 22px;
+    font-size: 30px;
     letter-spacing: -1.2px;
     color: rgb(66, 62, 49);
     font-family: 'Cormorant Garamond', serif;
@@ -183,7 +183,7 @@ img {
 }
 
 /* Media queries for responsive design on mobile */
-@media only screen and (max-width: 820px) {
+@media only screen and (max-width: 768px) {
     .hero h1 {
         font-size: 32px;
         line-height: 40px;
@@ -218,6 +218,10 @@ img {
         padding: 30px;
     }
 
+    .main-content {
+            font-size: 16px;
+            padding: 30px;
+        }
     #artContainer img {
         min-height: 400px;
     }
